fixed spacing

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -51,7 +51,7 @@
 	opacity: 1;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 1468px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
 	.banner {
 		height: 75vh;
 	}
