--- a/css/components/image.css
+++ b/css/components/image.css
@@ -9,11 +9,3 @@
   	height: 5vh;
   	font-size: 5vh;
 }
-/*
-@media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
-	.image-small {  
-		width: 70vh;
-		height: 0vh;
-  		font-size: 50px;
-	}
-}*/
